# markoutlib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: .gitignore  01_quickstart.ipynb  01_quickstart.py  02_crypto_markouts.ipynb  02_crypto_markouts.py  03_spread_decomposition.ipynb  03_spread_decomposition.py  04_information_leakage.ipynb  04_information_leakage.py  05_blog_how_toxic.ipynb  fetch_data.py
markoutlib/: __init__.py  _compat.py  _compute.py  _horizons.py  _result.py  _stats.py  _types.py
markoutlib/viz/: __init__.py  _comparison.py  _curve.py  _distribution.py  _heatmap.py  _scatter.py  _style.py
rust/: Cargo.toml
rust/src/: lib.rs
tests/: conftest.py  test_compat.py  test_compute.py  test_horizons.py  test_result.py  test_stats.py  test_validation.py  test_viz.py
