[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markoutlib"
version = "0.1.0"
description = "Markout P&L analysis for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "polars>=1.0,<2.0",
    "plotly>=5.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0", "pyarrow>=14.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "jupyter",
    "requests",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
